--- a/Breakout/Base.lproj/Main.storyboard
+++ b/Breakout/Base.lproj/Main.storyboard
@@ -103,7 +103,7 @@
                                 </state>
                                 <connections>
                                     <action selector="levelsButtonPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="mBl-ej-qIk"/>
-                                    <segue destination="QYO-O6-mWq" kind="presentation" identifier="FromMenuToLevelsMenu" modalPresentationStyle="fullScreen" id="7ji-lv-BsU"/>
+                                    <segue destination="QYO-O6-mWq" kind="presentation" identifier="FromMenuToLevelsMenu" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="7ji-lv-BsU"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rhombus.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="cuj-hU-Y6H">
@@ -194,7 +194,7 @@
                     <connections>
                         <segue destination="t8r-zK-EGk" kind="presentation" identifier="FromGameToLose" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="NBz-dD-eVt"/>
                         <segue destination="YzS-cn-L9e" kind="presentation" identifier="FromGameToWin" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="LMq-OG-I6Z"/>
-                        <segue destination="920-Cb-BIM" kind="presentation" identifier="FromGameToPause" modalPresentationStyle="overFullScreen" modalTransitionStyle="coverVertical" id="ZPn-QG-kdJ"/>
+                        <segue destination="920-Cb-BIM" kind="presentation" identifier="FromGameToPause" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="ZPn-QG-kdJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ho5-A4-HLr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -290,7 +290,7 @@
                         <outlet property="backToMenuButton" destination="kPo-pw-GmB" id="xRu-g4-5Rw"/>
                         <outlet property="collectionView" destination="MB2-FB-xv0" id="Edp-Ac-VsM"/>
                         <outlet property="headerTopView" destination="UMt-Wp-yGl" id="fVW-Ts-bKN"/>
-                        <segue destination="xHc-4y-LUL" kind="presentation" identifier="FromLevelsMenuToGame" modalPresentationStyle="fullScreen" id="Pv6-12-xr2"/>
+                        <segue destination="xHc-4y-LUL" kind="presentation" identifier="FromLevelsMenuToGame" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="Pv6-12-xr2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vAB-9Z-FUR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -741,6 +741,7 @@
                                         </state>
                                         <connections>
                                             <action selector="menuButtonPressed:" destination="z40-AT-fRo" eventType="touchUpInside" id="Qj8-WH-fTP"/>
+                                            <segue destination="pTm-ia-BK9" kind="unwind" unwindAction="unwindToARMenu:" id="VsI-y6-6XC"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NQb-8q-Nmm" userLabel="Settings">
@@ -794,6 +795,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kjc-CV-Ekc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="pTm-ia-BK9" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-3843.0769230769229" y="-672.51184834123217"/>
         </scene>
@@ -1141,7 +1143,7 @@
                         <outlet property="gameSceneView" destination="8VF-mL-YMd" id="25a-vu-Rqv"/>
                         <segue destination="hRn-z7-05o" kind="presentation" identifier="FromARGameToARWin" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="Ooe-yt-Wbw"/>
                         <segue destination="z40-AT-fRo" kind="presentation" identifier="FromARGameToARLose" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="xVi-ss-c7N"/>
-                        <segue destination="ead-SJ-Qyd" kind="presentation" identifier="FromARGameToARPause" modalPresentationStyle="overFullScreen" modalTransitionStyle="coverVertical" id="EcB-1v-M4n"/>
+                        <segue destination="ead-SJ-Qyd" kind="presentation" identifier="FromARGameToARPause" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="EcB-1v-M4n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xyu-rK-hJl" sceneMemberID="firstResponder"/>
@@ -1721,7 +1723,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="p3I-S7-oBl"/>
+        <segue reference="ZNT-0S-EYt"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="ARButton" width="1000" height="1000"/>
