--- a/Breakout/Base.lproj/Main.storyboard
+++ b/Breakout/Base.lproj/Main.storyboard
@@ -31,10 +31,9 @@
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </skView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J1x-mj-oX5" userLabel="ToARMenu">
-                                <rect key="frame" x="10" y="672" width="110" height="110"/>
+                                <rect key="frame" x="10" y="667" width="115" height="115"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="110" id="d65-5r-jff"/>
-                                    <constraint firstAttribute="height" constant="110" id="tt6-7U-i7c"/>
+                                    <constraint firstAttribute="width" secondItem="J1x-mj-oX5" secondAttribute="height" multiplier="1:1" id="tHa-8l-KMg"/>
                                 </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -48,18 +47,16 @@
                                 <rect key="frame" x="250" y="667" width="115" height="115"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="115" id="ahR-gz-dq4"/>
-                                    <constraint firstAttribute="width" constant="115" id="duD-gh-LnX"/>
+                                    <constraint firstAttribute="width" secondItem="H7A-bD-Nh7" secondAttribute="height" multiplier="1:1" id="lcL-WE-bxm"/>
                                 </constraints>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="ShopButton"/>
                                 <connections>
-                                    <action selector="shopButtonPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="TAL-8g-xPt"/>
-                                    <segue destination="sLQ-jT-mcQ" kind="presentation" identifier="FromMainMenuToShop" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="ZNT-0S-EYt"/>
+                                    <segue destination="sLQ-jT-mcQ" kind="presentation" identifier="FromMainMenuToShop" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="Y2f-0h-mfv"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ldv-ZQ-WN0" userLabel="UserMoney">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ldv-ZQ-WN0" userLabel="UserMoney">
                                 <rect key="frame" x="235" y="622" width="100" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="KUe-K1-nyQ"/>
@@ -73,7 +70,6 @@
                                 <rect key="frame" x="57.666666666666657" y="438" width="260" height="80"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="OhH-zs-rBp"/>
                                     <constraint firstAttribute="width" secondItem="gxq-6X-q5d" secondAttribute="height" multiplier="13:4" id="q2H-eL-0QO"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -89,7 +85,6 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Eml-9I-zh7" secondAttribute="height" multiplier="13:4" id="eYm-4m-Yjm"/>
-                                    <constraint firstAttribute="height" constant="80" id="m8Z-dR-ykn"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="LevelsButton">
@@ -100,7 +95,7 @@
                                     <segue destination="QYO-O6-mWq" kind="presentation" identifier="FromMenuToLevelsMenu" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="7ji-lv-BsU"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rhombus.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="cuj-hU-Y6H">
+                            <imageView hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rhombus.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="cuj-hU-Y6H">
                                 <rect key="frame" x="335" y="618" width="30" height="38.666666666666629"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -115,6 +110,7 @@
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="H7A-bD-Nh7" secondAttribute="trailing" constant="10" id="5hn-dh-cfg"/>
                             <constraint firstAttribute="bottom" secondItem="fOh-YZ-gNo" secondAttribute="bottom" id="BfY-8Q-diT"/>
                             <constraint firstItem="Eml-9I-zh7" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="57.5" id="PR3-VQ-2o7"/>
+                            <constraint firstAttribute="trailing" secondItem="J1x-mj-oX5" secondAttribute="trailing" constant="250" id="Pop-uC-501"/>
                             <constraint firstItem="cuj-hU-Y6H" firstAttribute="leading" secondItem="Ldv-ZQ-WN0" secondAttribute="trailing" id="Ukv-Dc-0kt"/>
                             <constraint firstItem="fOh-YZ-gNo" firstAttribute="trailing" secondItem="4qk-I5-YsI" secondAttribute="trailing" id="W7E-WP-mXJ"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="gxq-6X-q5d" secondAttribute="trailing" constant="57.5" id="X9K-In-giN"/>
@@ -132,6 +128,7 @@
                             <constraint firstItem="J1x-mj-oX5" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="10" id="pqC-gd-xe1"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="gxq-6X-q5d" secondAttribute="trailing" constant="57.5" id="qLi-WS-98Z"/>
                             <constraint firstItem="H7A-bD-Nh7" firstAttribute="top" secondItem="cuj-hU-Y6H" secondAttribute="bottom" constant="10" id="sTY-nD-0FV"/>
+                            <constraint firstItem="H7A-bD-Nh7" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" constant="250" id="tSc-hG-SlS"/>
                         </constraints>
                     </view>
                     <connections>
@@ -155,8 +152,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <skView tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cd2-RX-ZFw" userLabel="Game View">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                            <skView tag="1" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cd2-RX-ZFw" userLabel="Game View">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="815"/>
                             </skView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qAX-V8-CAt" userLabel="Pause">
                                 <rect key="frame" x="0.0" y="427" width="130" height="130"/>
@@ -188,7 +185,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ho5-A4-HLr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2207.6923076923076" y="64.691943127962077"/>
+            <point key="canvasLocation" x="2207.1999999999998" y="64.285714285714292"/>
         </scene>
         <!--Levels Menu View Colntroller-->
         <scene sceneID="asG-Je-rkg">
@@ -202,7 +199,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
                                 <subviews>
                                     <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kPo-pw-GmB" userLabel="Back">
-                                        <rect key="frame" x="10" y="50" width="121" height="71"/>
+                                        <rect key="frame" x="10" y="50" width="143" height="71"/>
                                         <color key="backgroundColor" red="0.17846872050000001" green="0.24072952219999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <color key="tintColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -222,7 +219,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LEVELS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="yir-7F-rFx">
-                                        <rect key="frame" x="171" y="50" width="188" height="71"/>
+                                        <rect key="frame" x="193" y="50" width="166" height="71"/>
                                         <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="45"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
@@ -1219,7 +1216,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1fU-ao-gHt" userLabel="back">
-                                        <rect key="frame" x="10" y="50" width="121" height="71"/>
+                                        <rect key="frame" x="10" y="50" width="143" height="71"/>
                                         <color key="backgroundColor" red="0.40667767772465702" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -1233,7 +1230,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LEVELS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="Em7-xe-Sj2">
-                                        <rect key="frame" x="171" y="50" width="188" height="71"/>
+                                        <rect key="frame" x="193" y="50" width="166" height="71"/>
                                         <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="45"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
@@ -1643,7 +1640,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="RIZ-H4-BAL"/>
+        <segue reference="p3I-S7-oBl"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="ARButton" width="1000" height="1000"/>
